# game

./: Cargo.toml
game/: Cargo.toml
game/src/: main.rs  plugin.rs  setup.rs
game_assets/: Cargo.toml
game_camera/: Cargo.toml
game_camera/src/: component.rs  lib.rs  systems.rs
game_character/: Cargo.toml
game_character/src/: components.rs  lib.rs  systems.rs
game_character/src/character/: components.rs  mod.rs  systems.rs
game_character/src/player/: components.rs  mod.rs  systems.rs
game_debug/: Cargo.toml
game_debug/src/: lib.rs
game_scene/: Cargo.toml
game_scene/src/: lib.rs
game_scene/src/atmosphere/: mod.rs  systems.rs
