[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = "0.1.0"
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
game_assets = { version = "0.1.0", path = "../game_assets" }
game_camera = { version = "0.1.0", path = "../game_camera" }
game_character = { version = "0.1.0", path = "../game_character" }
game_debug = { version = "0.1.0", path = "../game_debug" }
game_scene = { version = "0.1.0", path = "../game_scene" }
serde = "1.0.203"

